# SteadyHttp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  clean_cache.py  conanfile.py  pyproject.toml  tasks.py
TestModule/HttpTempFileServer/: .gitignore  README.md  generate_certs.py  server.py  tasks.py
TestModule/SteadyGet/: .gitignore  CMakeLists.txt  README.md  conanfile.py  tasks.py
TestModule/SteadyGet/src/: main.cpp
TestModule/SteadyHttpTester/: .gitignore  CMakeLists.txt  README.md  conanfile.py  tasks.py
TestModule/SteadyHttpTester/src/: main.cpp
cmake/: SteadyHttpConfig.cmake.in
examples/: sync_download.cpp  sync_upload.cpp
include/steady_http/: client.hpp  error.hpp  options.hpp  request.hpp  response.hpp  result.hpp  version.hpp
src/: client.cpp  error.cpp  url.cpp  url.hpp
