cmake_minimum_required(VERSION 3.24)
project(SteadyHttp VERSION 0.1.0 LANGUAGES CXX)
include(GNUInstallDirs)
include(CMakePackageConfigHelpers)
option(STEADY_HTTP_BUILD_EXAMPLES "Build examples" ON)
option(STEADY_HTTP_ENABLE_INSTALL "Enable install rules" ON)
option(STEADY_HTTP_WARNINGS_AS_ERRORS "Warnings as errors" OFF)
find_package(Boost REQUIRED COMPONENTS system url)
find_package(OpenSSL REQUIRED)
add_library(SteadyHttp src/client.cpp src/error.cpp src/url.cpp)
add_library(SteadyHttp::SteadyHttp ALIAS SteadyHttp)
target_compile_features(SteadyHttp PUBLIC cxx_std_20)
set_target_properties(SteadyHttp PROPERTIES
  CXX_EXTENSIONS OFF
  EXPORT_NAME SteadyHttp
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR})
target_include_directories(SteadyHttp PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
target_link_libraries(SteadyHttp PUBLIC Boost::system Boost::url OpenSSL::SSL OpenSSL::Crypto)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  target_compile_options(SteadyHttp PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow -Wnon-virtual-dtor)
  if(STEADY_HTTP_WARNINGS_AS_ERRORS)
    target_compile_options(SteadyHttp PRIVATE -Werror)
  endif()
endif()
if(STEADY_HTTP_BUILD_EXAMPLES)
  add_executable(steady_http_sync_download examples/sync_download.cpp)
  target_link_libraries(steady_http_sync_download PRIVATE SteadyHttp::SteadyHttp)
  add_executable(steady_http_sync_upload examples/sync_upload.cpp)
  target_link_libraries(steady_http_sync_upload PRIVATE SteadyHttp::SteadyHttp)
endif()
if(STEADY_HTTP_ENABLE_INSTALL)
  install(TARGETS SteadyHttp EXPORT SteadyHttpTargets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
  install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
  install(EXPORT SteadyHttpTargets FILE SteadyHttpTargets.cmake NAMESPACE SteadyHttp:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/SteadyHttp)
  configure_package_config_file(cmake/SteadyHttpConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/SteadyHttpConfig.cmake INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/SteadyHttp)
  write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/SteadyHttpConfigVersion.cmake VERSION ${PROJECT_VERSION} COMPATIBILITY SameMajorVersion)
  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/SteadyHttpConfig.cmake ${CMAKE_CURRENT_BINARY_DIR}/SteadyHttpConfigVersion.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/SteadyHttp)
  install(FILES LICENSE DESTINATION ${CMAKE_INSTALL_DATADIR}/licenses/steady-http)
endif()
