cmake_minimum_required(VERSION 3.24)
project(SteadyGet LANGUAGES CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(SteadyHttp CONFIG REQUIRED)
add_executable(steady-get src/main.cpp)
target_compile_features(steady-get PRIVATE cxx_std_20)
target_link_libraries(steady-get PRIVATE SteadyHttp::SteadyHttp)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  target_compile_options(steady-get PRIVATE -Wall -Wextra -Wpedantic -Wconversion)
endif()
